# Python-Tools

./: .gitignore  ARCHITECTURE.md  AUDIO_SUPPORT.md  BLUR_DETECTION_GUIDE.md  BLUR_DETECTION_METHODS.md  BLUR_DETECTION_V2_GUIDE.md  BLUR_METHODS_USAGE_GUIDE.md  BUGFIXES_WORKSPACE_SCAN.md  BUGFIX_CIRCULAR_IMPORTS.md  BUGFIX_CONFIG_STORAGE.md  BUGFIX_SCAN_PROGRESS_BAR.md  BUGFIX_SIDECAR_COUNTING.md  BUGFIX_WORKSPACE_SCOPE.md  BURST_HIERARCHIE_DESIGN.md  CHANGELOG.md  CONFIG_STORAGE_GUIDE.md  CONTRIBUTING.md  DEVELOPMENT.md  EXPORT_OPTIMIZATION.md  EXPORT_PROFILES_QUICKREF.md  FEATURE_WORKSPACE_DELETE.md  GETTING_STARTED.md  HYBRID_SIDECAR_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INSTALL_FFMPEG.md  LICENSE  LUMIX_S5_SETUP.md  MEDIA_MANAGER_GUIDE.md  NEXT_STEPS.md  PERFORMANCE_ANALYSIS_MEDIA_LOADING.md  PERFORMANCE_FIX_PROJECT_MEDIA.md  PERFORMANCE_IMPLEMENTATION_PHASE1_2.md  PHASE3_SQLITE_ARCHITECTURE.md  PHASE_1_FIXES_AND_ENHANCEMENTS.md  PHASE_2B_GUI_INTEGRATION.md  PHASE_2_IMPLEMENTATION.md  PRESCAN_ARCHITECTURE.md  PROJECT_BASED_MEDIA_LOADING_ROADMAP.md  PROJECT_SUMMARY.md  QUALITY_DETECTION_UI_GUIDE.md  (+17 more)
docs/: cursor_media-management-architecture.md  cursor_modernes_foto_tool_architektur_u.md  cursor_modernes_foto_tool_architektur_u2.md
examples/: README.md  example_config.yaml  example_usage.py  export_slideshow_example.py
gui_poc/: BLURRED_BACKGROUND.md  BUGFIX_2026-02-09_BURST_LEGACY.md  CLEANUP_2026-02-09_V1_REMOVED.md  EXPORT_ANLEITUNG.md  EXPORT_UPDATE_NOTE.md  FEATURES.md  FULLSCREEN_GUIDE.md  INFINITE_SCROLL.md  KEYBOARD_SHORTCUTS.md  KEYWORDS_GUIDE.md  MOBILE_ACCESS_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PHASE3_IMPLEMENTATION.md  PROJECTS_QUICKSTART.md  README.md  SIMPLIFIED_SLIDESHOW.md  SLIDESHOW_MUSIC_GUIDE.md  SLIDESHOW_PLAN.md  SLIDESHOW_QUICKSTART.md  SMART_TV_GUIDE.md  SMART_TV_QUICKSTART.md  TRANSITIONS_GUIDE.md  WEB_GALLERY_EXPORT.md  WHY_LEGACY_MODE.md  YOUTUBE_STYLE_UX.md  check_burst_db.py  check_db.py  check_db_status.py  check_metadata.py  db_manager.py  generate_thumbnails.py  hybrid_manager.py  migrate_folders.py  migrate_schema_v2.py  migrate_schema_v3.py  migration.py  quick_migrate.py  repair_exif.py  resync_database.py  server.py  (+8 more)
gui_poc/docs/: COMPATIBILITY_ANALYSIS.md  (+10 more)
photo_tool/: __init__.py
tests/: test_time_grouping.py
(+74 files in other folders)
